# va_list-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: impl-aarch64-elf.rs  impl-aarch64-macos.rs  impl-arm-sysv.rs  impl-cdecl32.rs  impl-cdecl64.rs  impl-x86-sysv.rs  impl-x86_64-elf.rs  impl-x86_64-win64.rs  lib.rs  wrapper.rs
tests/: lib.rs
