[package]
name = "va_list"
version = "0.0.3"
authors = [ "John Hodge <tpg@mutabah.net>" ]
description = "Provides a rust implementation of the 'va_list' type for a small set of ABIs. Allowing rust implementations of functions like vprintf."
repository = "https://github.com/thepowersgang/va_list-rs"
readme = "README.md"
keywords = ["unsafe", "va_list", "ffi", "c"]
license = "MIT"

[features]
no_std = []

[dev-dependencies.va_list-helper]
version = "0.0.2"
path = "deps/helper/"
